fixed the GetStarted overlap sticky gooey now works 100%

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -28,11 +28,13 @@ h1 {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 999;
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .content {
   padding-top: 60px;
+  z-index: 999;
 }
 
 footer {
@@ -202,6 +204,7 @@ body {
     border-radius: 2.8rem;
     margin-top: -85px;
     margin-left: -5px;
+    z-index: -999;
 }
 
 .glow-on-hover {
